# CMAudio

./: .gitignore  .gitmodules  ANALYSIS_SUMMARY.md  ARCHITECTURE_ANALYSIS.md  AUDIOSCENE_ANALYSIS.md  AudioMixer_Usage.md  AudioPlayer_Analysis.md  AudioPlayer_Analysis_EN.md  AudioPlayer_Diagrams.md  AudioScene_Usage.md  CMakeLists.txt  MIDIORCHESTRA_GUIDE.md  MIDIORCHESTRA_IMPLEMENTATION.md  MIDIPLAYER_GUIDE.md  MIDIPLAYER_IMPLEMENTATION_SUMMARY.md  MIDI_CHANNEL_API.md  MIDI_CONFIG_API.md  MIDI_DECODER_COMPARISON.md  QUICK_REFERENCE.md  README.md  path_config.cmake
Plug-Ins/: CMakeLists.txt
Plug-Ins/Audio.ADLMIDI/: CMakeLists.txt  MidiRead.cpp  README.md
Plug-Ins/Audio.FluidSynth/: CMakeLists.txt  EXAMPLES.md  MidiRead.cpp  README.md
Plug-Ins/Audio.OPNMIDI/: CMakeLists.txt  MidiRead.cpp  README.md
Plug-Ins/Audio.Opus/: CMakeLists.txt  OpusRead.cpp  OpusTest.cpp
Plug-Ins/Audio.Opus/opus/celt/: _kiss_fft_guts.h  arch.h  bands.h  celt.h  celt_lpc.h  cpu_support.h  cwrs.h  ecintrin.h  entcode.h  entdec.h  entenc.h  fixed_debug.h  fixed_generic.h  float_cast.h  kiss_fft.h  laplace.h  mathops.h  mdct.h  mfrngcod.h  modes.h  os_support.h  pitch.h  quant_bands.h  rate.h  stack_alloc.h  static_modes_fixed.h  static_modes_fixed_arm_ne10.h  static_modes_float.h  static_modes_float_arm_ne10.h  vq.h
Plug-Ins/Audio.Opus/opus/celt/arm/: armcpu.h  fft_arm.h  fixed_arm64.h  fixed_armv4.h  fixed_armv5e.h  kiss_fft_armv4.h  kiss_fft_armv5e.h  mdct_arm.h  pitch_arm.h
Plug-Ins/Audio.Opus/opus/celt/mips/: celt_mipsr1.h  fixed_generic_mipsr1.h  kiss_fft_mipsr1.h  mdct_mipsr1.h  pitch_mipsr1.h  vq_mipsr1.h
Plug-Ins/Audio.Opus/opus/celt/x86/: celt_lpc_sse.h  pitch_sse.h  x86cpu.h
Plug-Ins/Audio.Opus/opus/include/: opus.h  opus_custom.h  opus_defines.h  opus_multistream.h  opus_types.h
Plug-Ins/Audio.Opus/opus/silk/: API.h  Inlines.h  MacroCount.h  MacroDebug.h  NSQ.h  PLC.h  SigProc_FIX.h  control.h  debug.h  define.h  errors.h  macros.h  main.h  pitch_est_defines.h  resampler_private.h  resampler_rom.h  resampler_structs.h  structs.h  tables.h  tuning_parameters.h  typedef.h
Plug-Ins/Audio.Opus/opus/silk/arm/: NSQ_neon.h  SigProc_FIX_armv4.h  SigProc_FIX_armv5e.h  macros_arm64.h  macros_armv4.h  macros_armv5e.h
Plug-Ins/Audio.Opus/opus/silk/fixed/: main_FIX.h  structs_FIX.h
Plug-Ins/Audio.Opus/opus/silk/fixed/mips/: noise_shape_analysis_FIX_mipsr1.h  prefilter_FIX_mipsr1.h  warped_autocorrelation_FIX_mipsr1.h
Plug-Ins/Audio.Opus/opus/silk/float/: SigProc_FLP.h  main_FLP.h  structs_FLP.h
Plug-Ins/Audio.Opus/opus/silk/mips/: NSQ_del_dec_mipsr1.h  macros_mipsr1.h  sigproc_fix_mipsr1.h
Plug-Ins/Audio.Opus/opus/silk/x86/: SigProc_FIX_sse.h  main_sse.h
Plug-Ins/Audio.Opus/opus/src/: analysis.h  mlp.h  opus_private.h  tansig_table.h
Plug-Ins/Audio.Opus/opus/tests/: test_opus_common.h
Plug-Ins/Audio.Opus/opus/win32/: config.h  version.h
Plug-Ins/Audio.Opus/opusfile/examples/: win32utf8.h
Plug-Ins/Audio.Opus/opusfile/include/: opusfile.h
Plug-Ins/Audio.Opus/opusfile/src/: internal.h  winerrno.h
Plug-Ins/Audio.Timidity/: CMakeLists.txt  EXAMPLES.md  MidiRead.cpp  README.md
Plug-Ins/Audio.TinySoundFont/: CMakeLists.txt  EXAMPLES.md  MidiRead.cpp  README.md
Plug-Ins/Audio.Tremolo/: OggRead.cpp
Plug-Ins/Audio.Tremolo/Tremolo/: asm_arm.h  codebook.h  codec_internal.h  config_types.h  ivorbiscodec.h  ivorbisfile.h  lsp_lookup.h  mdct.h  mdct_lookup.h  misc.h  ogg.h  os.h  os_types.h  window_lookup.h
Plug-Ins/Audio.Tremor/: OggRead.cpp
Plug-Ins/Audio.Tremor/tremor/: asm_arm.h  backends.h  block.h  codebook.h  codec_internal.h  config.h  config_types.h  ivorbiscodec.h  ivorbisfile.h  lsp_lookup.h  mdct.h  mdct_lookup.h  misc.h  os.h  registry.h  window.h  window_lookup.h
Plug-Ins/Audio.Vorbis/: CMakeLists.txt  OggRead.cpp
Plug-Ins/Audio.Vorbis/libvorbis/include/vorbis/: codec.h  vorbisenc.h  vorbisfile.h
Plug-Ins/Audio.Vorbis/libvorbis/lib/: backends.h  bitrate.h  codebook.h  codec_internal.h  envelope.h  highlevel.h  lookup.h  lookup_data.h  lpc.h  lsp.h  masking.h  mdct.h  misc.h  os.h  psy.h  registry.h  scales.h  smallft.h  window.h
Plug-Ins/Audio.Vorbis/libvorbis/lib/books/coupled/: res_books_51.h  res_books_stereo.h
Plug-Ins/Audio.Vorbis/libvorbis/lib/books/floor/: floor_books.h
Plug-Ins/Audio.Vorbis/libvorbis/lib/books/uncoupled/: res_books_uncoupled.h
Plug-Ins/Audio.Vorbis/libvorbis/lib/modes/: floor_all.h  psych_11.h  psych_16.h  psych_44.h  psych_8.h  residue_16.h  residue_44.h  residue_44p51.h  residue_44u.h  residue_8.h  setup_11.h  setup_16.h  setup_22.h  setup_32.h  setup_44.h  setup_44p51.h  setup_44u.h  setup_8.h  setup_X.h
Plug-Ins/Audio.Wav/: CMakeLists.txt  WavRead.cpp
Plug-Ins/Audio.WildMidi/: CMakeLists.txt  EXAMPLES.md  MidiRead.cpp  README.md
Plug-Ins/libogg/include/ogg/: ogg.h  os_types.h
Plug-Ins/libogg/src/: crctable.h
_codeql_build_dir/: Makefile
docs/: AudioBuffer_Manual_zh.md  AudioMixerScene_Manual_zh.md  AudioMixer_Manual_zh.md  AudioPlayer_Manual_zh.md  AudioSource_Manual_zh.md  CMAudio_使用手册.md  IMPROVEMENT_PLAN.md  MIDIOrchestraPlayer_Manual_zh.md  MIDIPlayer_Manual_zh.md  ReleaseNotes.md  ReleaseNotes_v2.md  ReleaseNotes_v2_zh.md  SpatialAudioWorld_Manual_zh.md
examples/: AudioMixerSceneConfig.h  AudioSceneConfig.h  CMakeLists.txt  README.md  WavReader.h  WavWriter.h  mixer_basic_test.cpp  scene_city_test.cpp  scene_swarm_test.cpp  wav_resample.cpp
examples/configs/: city_scene.toml  swarm_scene.toml
examples/maximilian_demo/: CMakeLists.txt  main_maxi.cpp
examples/wav_samples/: README.md
src/: AudioBuffer.cpp  AudioDecode.cpp  AudioDecode.h  AudioFileType.cpp  AudioFilterPreset.cpp  AudioManage.cpp  AudioManager.cpp  AudioMixer.cpp  AudioMixerScene.cpp  AudioMixer_old.cpp  AudioPlayer.cpp  AudioResampler.cpp  AudioScene.cpp  AudioSource.cpp  CMakeLists.txt  DirectionalGainPattern.cpp  EFX.cpp  Listener.cpp  MIDIInstrument.cpp  MIDIOrchestraPlayer.cpp  MIDIPlayer.cpp  OpenAL.cpp  ReverbPreset.cpp  SpatialAudioWorld.cpp  al.cpp  alc.cpp
src/wrappers/: CMakeLists.txt  maxi_wrapper.cpp
(+37 files in other folders)
